java 6 compliant base64 encoding.